--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,20 @@
-<h1>Hello world!</h1>
+<h1 class='text-center'>Image generator</h1>
+
+<form action='/' method='post'>
+  <input
+    class='form-control mb-2'
+    placeholder='Enter image params'
+    required
+    name='prompt'
+  />
+
+  <select name='size' class='form-control mb-2'>
+    <option value=''></option>
+    <option value=''></option>
+    <option value=''></option>
+  </select>
+
+  <input type='number' class='form-control mb-2' name='number' value='1' />
+
+  <button type='submit' class='btn btn-primary'>Generate</button>
+</form>
