--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,9 +9,9 @@
   />
 
   <select name='size' class='form-control mb-2'>
-    <option value=''></option>
-    <option value=''></option>
-    <option value=''></option>
+    <option value='256x256'>Small</option>
+    <option value='512x512'>Medium</option>
+    <option value='1024x1024'>Large</option>
   </select>
 
   <input type='number' class='form-control mb-2' name='number' value='1' />
