--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,3 +18,11 @@
 
   <button type='submit' class='btn btn-primary'>Generate</button>
 </form>
+
+{{#if images}}
+  <div class='row'>
+    {{#each images}}
+      <img src='{{this.url}}' class='image-fluid rounded' />
+    {{/each}}
+  </div>
+{{/if}}
